<resources>
    <string name="app_name">Basic Mobile App</string>

    <string name="home_button">Home</string>
    <string name="refresh_button">Refresh Data</string>

    <string name="company_activity_title">Company List</string>
    <string name="target_usd">Target USD</string>
    <string name="investment_usd">Investment USD</string>
    <string name="no_investors"># Investors</string>

    <string name="transactions_activity_title">Transactions</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="investor_id">Investor Id</string>
    <string name="amount_usd">Amount USD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
